use new layout on pages. A new layout for blog is comming

--- a/src/pages/[lang]/blog/[...slug].astro
+++ b/src/pages/[lang]/blog/[...slug].astro
@@ -1,6 +1,6 @@
 ---
 import Admonition from "@/components/content/Admonition/Admonition.astro";
-import Layout from "@/layouts/Basic.astro";
+import Layout from "@/layouts/WithHeader.astro";
 import { Image } from "astro:assets";
 import { getBlogEntry } from "@/utils/content";
 import PostTranslations from "@/components/PostTranslations.astro";
