--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -1,6 +1,6 @@
 ---
 import { DEFAULT_LOCALE } from "@/i18n";
-import Layout from "@/layouts/Basic.astro";
+import Layout from "@/layouts/WithHeader.astro";
 import { isSupportedLang } from "@/utils/i18n";
 
 interface Params {
