--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,7 +1,6 @@
 ---
 import { path, split, pipe, filter } from "rambda";
-import Footer from "@/components/layout/Footer.astro";
-import MinimalHeader from "@/components/layout/MinimalHeader.astro";
+import Layout from "@/layouts/WithMiniHeader.astro";
 import { DEFAULT_LOCALE, getFullLocalizedPath, isSupportedLang, useTranslation } from "@/utils/i18n";
 
 export const prerender = true;
@@ -17,36 +16,29 @@ const luckyURL = getLocalizedPath("/random");
 const t = useTranslation(lang);
 ---
 
-<!DOCTYPE html>
-<html lang={lang} class="h-screen">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{t("errors", "not_found")}— Misael Taveras</title>
-    <meta name="description" content={t("errors", "not_found_description")} />
-  </head>
-  <body class="flex h-full flex-col bg-slate-50 text-slate-900 dark:bg-gray-900 dark:text-slate-100">
-    <MinimalHeader lang={lang} />
-    <main class="grid flex-1 place-items-center px-6 py-24 sm:py-32 lg:px-8">
-      <div class="text-center">
-        <p class="text-xl text-slate-600 dark:text-slate-300 sm:text-4xl">404</p>
-        <h1 class="mb-10 text-4xl font-bold sm:mb-12 sm:text-6xl">{t("errors", "not_found_description")}</h1>
-        <p class="mb-24 sm:mb-20">{t("errors", "not_found_message")}</p>
-        <div class="space-x-8">
-          <a
-            href={homeURL}
-            class="inline-block rounded-md bg-blue-50 px-6 py-3 font-semibold shadow-sm transition-colors hover:bg-blue-100/50 active:bg-blue-100 dark:bg-slate-800 dark:hover:bg-slate-800/90 dark:active:bg-slate-800/70"
-            >{t("navigation", "go_home")}</a
-          >
+<Layout
+  fullHeight
+  lang={lang}
+  description={t("errors", "not_found_description")}
+  title={t("errors", "not_found")}
+  class="flex h-full flex-col dark:!bg-slate-900"
+>
+  <main class="grid flex-1 place-items-center px-6 py-24 sm:py-32 lg:px-8">
+    <div class="text-center">
+      <p class="text-xl text-slate-600 dark:text-slate-300 sm:text-4xl">404</p>
+      <h1 class="mb-10 text-4xl font-bold sm:mb-12 sm:text-6xl">{t("errors", "not_found_description")}</h1>
+      <p class="mb-24 sm:mb-20">{t("errors", "not_found_message")}</p>
+      <div class="space-x-8">
+        <a
+          href={homeURL}
+          class="inline-block rounded-md bg-blue-50 px-6 py-3 font-semibold shadow-sm transition-colors hover:bg-blue-100/50 active:bg-blue-100 dark:bg-slate-800 dark:hover:bg-slate-800/90 dark:active:bg-slate-800/70"
+          >{t("navigation", "go_home")}</a
+        >
 
-          <a href={luckyURL} class="inline-block font-semibold text-blue-800 dark:text-blue-50"
-            >{t("navigation", "feeling_lucky")}</a
-          >
-        </div>
+        <a href={luckyURL} class="inline-block font-semibold text-blue-800 dark:text-blue-50"
+          >{t("navigation", "feeling_lucky")}</a
+        >
       </div>
-    </main>
-    <Footer lang={lang} />
-  </body>
-</html>
+    </div>
+  </main>
+</Layout>
