--- a/src/layouts/WithMiniHeader.astro
+++ b/src/layouts/WithMiniHeader.astro
@@ -12,13 +12,21 @@ const {
   title,
   description,
   fullHeight,
+  canonical,
   lang = DEFAULT_LOCALE,
   class: className,
   ["class:list"]: classList,
 } = Astro.props;
 ---
 
-<Basic lang={lang} title={title} class:list={[className, classList]} description={description} fullHeight={fullHeight}>
+<Basic
+  canonical={canonical}
+  lang={lang}
+  title={title}
+  class:list={[className, classList]}
+  description={description}
+  fullHeight={fullHeight}
+>
   <Fragment slot="head">
     <slot name="head" />
   </Fragment>
