--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -10,7 +10,7 @@ interface Props {
 const basePath = Astro.url.pathname;
 
 const lang = Astro.props.lang ?? getLangFromUrl(Astro.url, true);
-const t = useTranslation(lang)
+const t = useTranslation(lang);
 ---
 
 <header class="fixed top-0 w-full bg-white shadow-md transition-transform dark:bg-slate-950">
@@ -23,7 +23,9 @@ const t = useTranslation(lang)
           aria-controls="mobile-menu"
           aria-expanded="false"
         >
-          <span class="sr-only" data-open-text={t('ui', 'open_menu')} data-close-text={t('ui', 'close_menu')}>{t('ui', 'open_menu')}</span>
+          <span class="sr-only" data-open-text={t("ui", "open_menu")} data-close-text={t("ui", "close_menu")}
+            >{t("ui", "open_menu")}</span
+          >
           <svg class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
             ></path>
@@ -50,7 +52,7 @@ const t = useTranslation(lang)
       </div>
       <div class="absolute inset-y-0 right-0 flex items-center pr-2">
         <button class="rounded-full p-2 hover:bg-blue-100/40 dark:hover:bg-gray-700/40 dark:hover:text-white">
-          <span class="sr-only">Search</span>
+          <span class="sr-only">{t("ui", "search")}</span>
           <svg
             class="h-6 w-6"
             fill="none"
