--- a/src/components/layout/MinimalHeader.astro
+++ b/src/components/layout/MinimalHeader.astro
@@ -1,13 +1,14 @@
 ---
 import { Image } from "astro:assets";
 import logo from "@/assets/brand/logo-REPLACE.svg";
-import { getLangFromUrl, type Language } from "@/utils/i18n";
+import { getLangFromUrl, useTranslation, type Language } from "@/utils/i18n";
 
 interface Props {
   lang?: Language;
 }
 
 const lang = Astro.props.lang ?? getLangFromUrl(Astro.url, true);
+const t = useTranslation(lang)
 ---
 
 <header class="relative top-0 w-full bg-slate-50 shadow-md dark:bg-gray-900">
@@ -26,7 +27,7 @@ const lang = Astro.props.lang ?? getLangFromUrl(Astro.url, true);
       </a>
       <div class="absolute inset-y-0 right-0 flex items-center pr-2">
         <button class="rounded-full p-2 hover:bg-blue-100/40 dark:hover:bg-gray-700/40 dark:hover:text-white">
-          <span class="sr-only">Search</span>
+          <span class="sr-only">{t('ui', 'search')}</span>
           <svg
             class="h-6 w-6"
             fill="none"
