--- a/src/components/layout/MinimalHeader.astro
+++ b/src/components/layout/MinimalHeader.astro
@@ -8,10 +8,10 @@ interface Props {
 }
 
 const lang = Astro.props.lang ?? getLangFromUrl(Astro.url, true);
-const t = useTranslation(lang)
+const t = useTranslation(lang);
 ---
 
-<header class="relative top-0 w-full bg-slate-50 shadow-md dark:bg-gray-900">
+<header class="relative top-0 z-40 w-full bg-slate-50 shadow-md dark:bg-gray-900">
   <div class="mx-auto max-w-7xl px-2 sm:border-none sm:px-6 lg:px-8">
     <div class="relative flex h-20 items-center justify-between">
       <a href={`/${lang}`}>
@@ -27,7 +27,7 @@ const t = useTranslation(lang)
       </a>
       <div class="absolute inset-y-0 right-0 flex items-center pr-2">
         <button class="rounded-full p-2 hover:bg-blue-100/40 dark:hover:bg-gray-700/40 dark:hover:text-white">
-          <span class="sr-only">{t('ui', 'search')}</span>
+          <span class="sr-only">{t("ui", "search")}</span>
           <svg
             class="h-6 w-6"
             fill="none"
