create archive translation banner component

--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -36,8 +36,8 @@ const social = [
 ];
 /* eslint-enable @typescript-eslint/no-unsafe-assignment */
 
-const lang = Astro.props.lang ?? getLangFromUrl(Astro.url, true)
-const t = useTranslation(lang)
+const lang = Astro.props.lang ?? getLangFromUrl(Astro.url, true);
+const t = useTranslation(lang);
 ---
 
 <footer
@@ -45,7 +45,7 @@ const t = useTranslation(lang)
 >
   <div class="sm:flex sm:items-center sm:justify-between">
     <h6 class="hidden sm:block">
-      {t('ui', 'copyright')} ©️{year} - <strong class="font-semibold">Misael Taveras</strong>
+      {t("ui", "copyright")} ©️{year} - <strong class="font-semibold">Misael Taveras</strong>
     </h6>
     <ul class="flex items-center justify-center gap-4">
       {
@@ -57,7 +57,12 @@ const t = useTranslation(lang)
       }
     </ul>
   </div>
-  <p class="block pb-2 text-slate-700 dark:text-slate-300 sm:hidden">
+  <p class="block pt-2 text-slate-700 dark:text-slate-300 sm:hidden">
     <strong class="font-semibold">Misael Taveras</strong> ©️{year}
   </p>
+  <!-- TODO: Once we have the command palette, this will be a button to trigger the command palette to select the language
+      <p class="block pt-6 text-slate-700 dark:text-slate-100 sm:hidden">
+        Language set to <span class="border-b border-dotted border-slate-600 text-slate-50">English</span>
+      </p>
+  -->
 </footer>
