--- a/src/components/PageBanner.astro
+++ b/src/components/PageBanner.astro
@@ -7,7 +7,7 @@ const { class: className } = Astro.props;
 ---
 
 <aside
-  class="relative left-[calc(-50vw_+_50%);] w-screen min-w-full bg-blue-50/50 px-16 py-4 text-center text-base shadow-sm dark:bg-slate-950/50"
+  class="relative left-[calc(-50vw_+_50%);] w-screen min-w-full bg-blue-50/50 p-4 text-center text-base shadow-sm dark:bg-slate-950/50"
   class:list={className}
 >
   <div class="container mx-auto max-w-4xl">
