--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -22,15 +22,15 @@ const canonical = slugToCanonical('/404')
   canonical={canonical}
   fullHeight
   lang={lang}
-  description={t("errors", "not_found_description")}
-  title={t("errors", "not_found")}
+  description={t("messages", "page_not_found_description")}
+  title={t("messages", "page_not_found")}
   class="flex h-full flex-col dark:!bg-slate-900"
 >
   <main class="grid flex-1 place-items-center px-6 py-24 sm:py-32 lg:px-8">
     <div class="text-center">
       <p class="text-xl text-slate-600 dark:text-slate-300 sm:text-4xl">404</p>
-      <h1 class="mb-10 text-4xl font-bold sm:mb-12 sm:text-6xl">{t("errors", "not_found_description")}</h1>
-      <p class="mb-24 sm:mb-20">{t("errors", "not_found_message")}</p>
+      <h1 class="mb-10 text-4xl font-bold sm:mb-12 sm:text-6xl">{t("messages", "page_not_found_description")}</h1>
+      <p class="mb-24 sm:mb-20">{t("messages", "page_not_found_message")}</p>
       <div class="space-x-8">
         <a
           href={homeURL}
