--- a/src/pages/[lang]/blog/[...slug].astro
+++ b/src/pages/[lang]/blog/[...slug].astro
@@ -8,7 +8,7 @@ import PostTranslations from "@/components/PostTranslations.astro";
 const post = await getBlogEntry(Object.values(Astro.params).join("/"));
 
 if (!post) {
-  return Astro.redirect(`/404?from=${Astro.url.pathname.substring(-1)}`);
+  return Astro.redirect(`/404?from=${Astro.url.pathname}`);
 }
 
 const { Content } = await post.entry.render();
