--- a/src/layouts/WithMiniHeader.astro
+++ b/src/layouts/WithMiniHeader.astro
@@ -30,8 +30,8 @@ const {
   <Fragment slot="head">
     <slot name="head" />
   </Fragment>
-  <Header />
+  <Header lang={lang} />
   <!-- This is a hack to prevent the header from overlapping the content -->
   <slot />
-  <Footer />
+  <Footer lang={lang} />
 </Basic>
