--- a/src/layouts/About.page.astro
+++ b/src/layouts/About.page.astro
@@ -45,11 +45,11 @@ const t = useTranslation(lang);
     }
   </Fragment>
   <main>
-    <PageBanner class="!bg-gray-950">
+    <PageBanner class="!bg-blue-100 dark:!bg-gray-950">
       My resume is available for <a
         href={cvLink}
         download="taverasmisael-frontend-engineer-resume.pdf"
-        class="bg-gradient-to-tr from-blue-600 to-blue-400 bg-clip-text text-transparent">download here</a
+        class="text-blue-500 underline">download here</a
       >.
     </PageBanner>
     <div class="container mx-auto w-full">
