--- a/src/layouts/About.page.astro
+++ b/src/layouts/About.page.astro
@@ -46,10 +46,10 @@ const t = useTranslation(lang);
   </Fragment>
   <main>
     <PageBanner class="!bg-blue-100 dark:!bg-gray-950">
-      My resume is available for <a
+      {t('messages', "cv_is_available_in")} {' '}<a
         href={cvLink}
         download="taverasmisael-frontend-engineer-resume.pdf"
-        class="text-blue-500 underline">download here</a
+        class="text-blue-500 underline">{t('ui', "download_here").toLocaleLowerCase()}</a
       >.
     </PageBanner>
     <div class="container mx-auto w-full">
