move page layouts to a subfolder insid layouts

--- a/src/layouts/pages/About.astro
+++ b/src/layouts/pages/About.astro
@@ -2,7 +2,7 @@
 import { isSupportedLang, LANGUAGES, getLocalizedPage, useTranslation, type Language } from "@/utils/i18n";
 import { slugToCanonical } from "@/utils/content";
 import FullWidthBlock from "@/components/content/FullWidthBlock.astro";
-import Layout from "./WithHeader.astro";
+import Layout from "@/layouts/WithHeader.astro";
 import PageBanner from "@/components/PageBanner.astro";
 
 interface Props {
