remove full height on mobile for About page

--- a/src/layouts/pages/About.astro
+++ b/src/layouts/pages/About.astro
@@ -54,7 +54,7 @@ const t = useTranslation(lang);
     </PageBanner>
     <div class="container mx-auto w-full">
       <div
-        class="prose prose-slate mx-auto px-4 dark:prose-invert lg:prose-lg 2xl:prose-xl prose-img:mx-auto prose-img:rounded-sm prose-img:shadow-sm"
+        class="prose prose-slate dark:prose-invert lg:prose-lg 2xl:prose-xl prose-img:mx-auto prose-img:rounded-sm prose-img:shadow-sm mx-auto px-4"
       >
         <slot />
         <FullWidthBlock withContainer class="not-prose">
