temp: add prerendering
I'm thinking on moving away from having different paths for each language
as this can be daunting, push away possible contributors and it's becoming
even on this early stage, a pain to mantain.

--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -17,9 +17,7 @@ if (!collectionName) {
 
 const postFound = await getCollection(collectionName, ({ slug }) => slug.includes(name));
 
-if (!postFound.length) {
-  return Astro.redirect(`/404?from=${slug}`);
-}
-
-return Astro.redirect(getEntryURL(collectionName, postFound[0].slug));
+return postFound.length
+  ? Astro.redirect(getEntryURL(collectionName, postFound[0].slug))
+  : Astro.redirect(`/404?from=${slug}`);
 ---
