--- a/src/pages/[lang]/[...slug].astro
+++ b/src/pages/[lang]/[...slug].astro
@@ -10,11 +10,6 @@ interface Params {
 const { lang, slug } = Astro.params as unknown as Params;
 
 const found = getPageNameFromURL(lang, slug);
-console.log("found", found);
-if (found){
-  return Astro.redirect(slugToCanonical(found, Astro.url.origin))
-} else {
-  return Astro.redirect(`/404?from=${lang}/${slug}`)
-}
 
+return found ? Astro.redirect(slugToCanonical(found, Astro.url.origin)) : Astro.redirect(`/404?from=${lang}/${slug}`);
 ---
