--- a/src/layouts/Basic.astro
+++ b/src/layouts/Basic.astro
@@ -26,6 +26,7 @@ const {
     <title>{title} — Misael Taveras</title>
     <meta name="description" content={description} />
     <link rel="canonical" href={canonical} />
+    <link rel="sitemap" href="/sitemap-index.xml" />
     <slot name="head" />
   </head>
   <body class="bg-slate-50 text-slate-900 dark:bg-gray-800 dark:text-slate-100" class:list={[className, classList]}>
